data/derived/comb/progs/unify/prog0160.ml.out
Characters 23-24:
  let _ = pipe [fun x -> x + 3] 3;;
                         ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
